--- a/interior-frontend/package.json
+++ b/interior-frontend/package.json
@@ -16,6 +16,7 @@
     "react-select": "^3.0.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
